Fix: the dropdown menu when on small screens to appear more user friendly.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,5 +183,9 @@ footer {
         padding-left: 20px;
     }
 
+    .navbar-toggler {
+        background-color: #576D0E;
+    }
+
 }
 
